[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hostpay"
version = "0.1.0"
description = "Python SDK for the HostPay payments API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["hostpay"]
